# semo

./: .gitignore  README.md
cmd/semo/: main.go
semo/: config.go  field.go  functions.go  store.go  template.go
semo_templates/cmake/executable/: config.yml
semo_templates/cmake/executable/_template_files/: CMakeLists.txt
semo_templates/cmake/project/: config.yml
semo_templates/cmake/project/_template_files/{{ noWhitespace .project_name }}/: CMakeLists.txt
semo_templates/cpp/class/: config.yml
semo_templates/cpp/class/_template_files/: {{ noWhitespace .class_name }}.cpp  {{ noWhitespace .class_name }}.h
semo_templates/cpp/header/_template_files/: {{ noWhitespace .arg_0 }}.h
